Bug 470425 - .backup files kept with the saved files
Summary: .backup files kept with the saved files
Status: RESOLVED FIXED
Alias: None
Product: ghostwriter
Classification: Applications
Component: general (show other bugs)
Version: 23.04.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: megan.conkle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-29 18:58 UTC by Andy
Modified: 2023-07-03 19:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2023-05-29 18:58:19 UTC
SUMMARY
The backup (.backup) files are kept in the directory where the real documents are saved. This is obnoxious, and I'd like a way to specify where the backup files are kept.

STEPS TO REPRODUCE
1. Make a new file
2. Save it.

OBSERVED RESULT
filename.backup appears in your Documents directory or whever.

EXPECTED RESULT
I want the .backup files to go where I tell them to.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
This is really a feature request.
Comment 1 Andy 2023-05-29 22:57:16 UTC
I already fixed this and put in a Merge Request.
Comment 2 megan.conkle 2023-07-03 19:08:30 UTC
Git commit 54942526a847ad275a2a0eb446b5a45705a70165 by Megan Conkle, on behalf of Andy malinowski.
Committed on 03/07/2023 at 19:08.
Pushed by wereturtle into branch 'master'.

Added configurable backup location for .backup files

Added a configurable location for the backup files.

M  +31   -2    src/documentmanager.cpp
M  +6    -0    src/documentmanager.h
M  +2    -0    src/mainwindow.cpp
M  +24   -0    src/settings/appsettings.cpp
M  +4    -0    src/settings/appsettings.h
M  +16   -0    src/settings/preferencesdialog.cpp
M  +14   -0    src/settings/preferencesdialog.ui

https://invent.kde.org/office/ghostwriter/-/commit/54942526a847ad275a2a0eb446b5a45705a70165