Added configurable backup location for .backup files

Added a configurable location for the backup files.

BUG: 470425